--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <section>
-      <canvas id="myCanvas" width="1000" height="1000"></canvas>
+      <canvas id="myCanvas" width="800" height="800"></canvas>
       <div class="all-buttons">
         <button id="start-button">Start Game</button>
-        <button id="reset">Reset Game</button>
+        <button id="reset" class="hidden">Restart Game</button>
         <h2 id="score">Score: <span>0</span></h2>
       </div>
       <aside>  
