--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <p class="instructions">
           Catch all the items you can! BUT, if <strong> The Girlfriend</strong> 👀 you in contact with a 👱🏻‍♀, or <strong>The
           Nutricionist</strong> 👀 you drinking 🍺 you lose. If they can't 👀 you, you can catch everything.
-          💰 always gives 1 point. 🚬 will give 1 point but you lose. <p class="instructions"> ⭐:If you get the ❤ while
-          Girlfriend is 👀 or 💧 while Nutricionist is 👀, you get 2 extra points!</p>
+          💰 always gives 1 point. 🚬 will give 1 point but you lose. <p class="instructions"> ⭐ If you get the ❤ while
+          Girlfriend is 👀 or 💧 while Nutricionist is 👀, you get 2 extra points! ⭐</p>
         </p>
       </aside>
     </section>
